Terminal Buffer class refactoring and improvements